--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -3261,6 +3261,7 @@ Valid values:
  * +number+: Use numeric hints. (In this mode you can also type letters from the hinted element to filter and reduce the number of elements that are hinted.)
  * +letter+: Use the characters in the `hints.chars` setting.
  * +word+: Use hints words based on the html elements and the extra words.
+ * +context+: Use hints words based on the html elements. No extra words.
 
 Default: +pass:[letter]+
 
